# WorkerOS

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEBUGGING.md  DECISIONS.md  NODE_COMPAT.md  NOTICE  PLAN.md  PROMPT.md  README.md  bunfig.toml  package.json
.github/workflows/: ci.yml
ci/: grep-gate.sh
crates/workeros-codec/: Cargo.toml
crates/workeros-codec/src/: lib.rs
crates/workeros-kernel/: CHANGELOG.md  Cargo.toml
crates/workeros-kernel/src/: caps.rs  errno.rs  hash.rs  json.rs  lib.rs  limits.rs  net.rs  process.rs  resolver.rs  ringbuf.rs  syscall.rs  tty.rs  vfs.rs
crates/workeros-kernel/src/shell/: ast.rs  lexer.rs  mod.rs  parser.rs  script_ast.rs  script_lexer.rs  script_parser.rs
crates/workeros-kernel/src/vfs/: mount.rs  path.rs
crates/workeros-node-bundler/: Cargo.toml
crates/workeros-node-bundler/src/: lib.rs
crates/wsh-grep/: Cargo.toml
crates/wsh-grep/src/: main.rs
crates/wsh-utils/: Cargo.toml
crates/wsh-utils/src/: main.rs
examples/run-js/: index.html
examples/shell/: index.html
playground/: README.md  index.html  main.js  otfw.config.js  package.json  serve.mjs
playground/app/: global.css  layout.jsx  page.jsx
playground/public/: _headers  _redirects
website/: .gitignore  CHANGELOG.md  README.md  index.html  otfw.config.js  package-lock.json  package.json
website/app/: global.css  layout.jsx  page.jsx
website/app/docs/: _meta.json  layout.jsx  page.mdx
website/app/docs/api/: _meta.json  page.mdx
website/app/docs/api/process/: page.mdx
website/app/docs/api/workeros/: page.mdx
website/app/docs/architecture/: page.mdx
website/app/docs/getting-started/: page.mdx
website/app/docs/programs/: page.mdx
website/app/docs/shell/: page.mdx
website/app/playground/: page.jsx
website/app/playground/os/: apps.js  dialogs.js  menus.js  notify.js  os.js  state.js  theme.js  wm.js
website/app/playground/ui/: AppView.jsx  Desktop.jsx  Dialog.jsx  Dock.jsx  DockApp.jsx  DockMin.jsx  Launcher.jsx  Toasts.jsx  Window.jsx
website/app/playground/ui/apps/: AboutApp.jsx  BrowserApp.jsx  EditorApp.jsx  FilesApp.jsx  ProcRow.jsx  ProcessesApp.jsx  SettingsApp.jsx  TerminalApp.jsx  WelcomeApp.jsx
website/app/try/: page.jsx
website/public/: preview-sw.js
website/tools/: sync-runtime.mjs
